commit all changes

--- a/Taskmanagement/TaskManagement.Api/TaskManagement.Api/appsettings.json
+++ b/Taskmanagement/TaskManagement.Api/TaskManagement.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "conn": "server=MARTINMATICS;database=TaskManagementDb;Trust Server Certificate=true; MultipleActiveResultSets=true;integrated security=true;"
+    "conn": "server=DESKTOP-JBUF49H;database=TaskManagementDb;Trust Server Certificate=true; MultipleActiveResultSets=true;integrated security=true;"
   },
 
   "Logging": {
@@ -11,3 +11,5 @@
   },
   "AllowedHosts": "*"
 }
+
+//
